--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 
+; Source code location (Arduino .ino file)
+src_dir = firmware/JamWysteria
+
 ; Serial Monitor settings
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
