--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 
-; Source code location (Arduino .ino file)
-src_dir = firmware/JamWysteria
-
 ; Serial Monitor settings
 monitor_speed = 115200
-monitor_filters = esp32_exception_decoder
 
 ; Build flags
 build_flags = 
@@ -39,14 +35,14 @@ build_flags =
     -D SPI_FREQUENCY=40000000
     -D SPI_READ_FREQUENCY=20000000
 
-; Library dependencies
+; Library dependencies (using GitHub URLs for compatibility)
 lib_deps = 
     bodmer/TFT_eSPI@^2.5.0
     https://github.com/schreibfaul1/ESP32-audioI2S.git
     bblanchon/ArduinoJson@^6.21.0
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/me-no-dev/AsyncTCP.git
-    paulstoffregen/XPT2046_Touchscreen@^1.4
+    https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
     adafruit/Adafruit GFX Library@^1.11.0
     adafruit/Adafruit BusIO@^1.14.0
 
