--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ monitor_speed = 115200
 
 ; Build flags
 build_flags = 
+    -std=gnu++17
     -D CORE_DEBUG_LEVEL=3
     -D BOARD_HAS_PSRAM
     -D USER_SETUP_LOADED=1
@@ -36,9 +37,10 @@ build_flags =
     -D SPI_READ_FREQUENCY=20000000
 
 ; Library dependencies (using GitHub URLs for compatibility)
+; Note: ESP32-audioI2S pinned to v2.0.7 for compatibility with older toolchains
 lib_deps = 
     bodmer/TFT_eSPI@^2.5.0
-    https://github.com/schreibfaul1/ESP32-audioI2S.git
+    https://github.com/schreibfaul1/ESP32-audioI2S.git#2.0.7
     bblanchon/ArduinoJson@^6.21.0
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/me-no-dev/AsyncTCP.git
