--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@6.4.0
 board = esp32dev
 framework = arduino
+platform_packages =
+    toolchain-xtensa-esp32@8.4.0+2021r2-patch5
 
 ; Serial Monitor settings
 monitor_speed = 115200
@@ -37,10 +39,9 @@ build_flags =
     -D SPI_READ_FREQUENCY=20000000
 
 ; Library dependencies (using GitHub URLs for compatibility)
-; Note: ESP32-audioI2S pinned to v2.0.7 for compatibility with older toolchains
 lib_deps = 
     bodmer/TFT_eSPI@^2.5.0
-    https://github.com/schreibfaul1/ESP32-audioI2S.git#2.0.7
+    https://github.com/schreibfaul1/ESP32-audioI2S.git
     bblanchon/ArduinoJson@^6.21.0
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/me-no-dev/AsyncTCP.git
