--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ monitor_speed = 115200
 
 ; Build flags
 build_flags = 
-    -std=gnu++17
+    -std=gnu++2a
     -D CORE_DEBUG_LEVEL=3
     -D BOARD_HAS_PSRAM
     -D USER_SETUP_LOADED=1
@@ -37,6 +37,8 @@ build_flags =
     -D TOUCH_CS=33
     -D SPI_FREQUENCY=40000000
     -D SPI_READ_FREQUENCY=20000000
+
+build_unflags = -std=gnu++11
 
 ; Library dependencies (using GitHub URLs for compatibility)
 lib_deps = 
